# attnroute

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
attnroute/: __init__.py  advisor.py  cli.py  compat.py  compressor.py  context_router.py  diagnostic.py  freshness.py  graph_retriever.py  history.py  indexer.py  ingest.py  installer.py  integrations.py  learner.py  oracle.py  outliner.py  predictor.py  repo_map.py  session_init.py  telemetry_lib.py  telemetry_record.py  telemetry_report.py
attnroute/plugins/: __init__.py  base.py  burnrate.py  loopbreaker.py  verifyfirst.py
benchmarks/: __init__.py  aider_head_to_head.py  bulletproof_benchmark.py  runner.py  verify_claims.py
examples/: keywords.json
tests/: __init__.py  conftest.py  test_burnrate.py  test_core.py  test_graph_retriever.py  test_installer.py  test_loopbreaker.py  test_verifyfirst.py  test_version.py
