[project]
name = "attnroute"
version = "0.5.7"
description = "Context routing for AI coding assistants - 98%+ token reduction"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "jeranaias", email = "jeranaias@gmail.com"}]
requires-python = ">=3.10"
keywords = ["claude", "llm", "context", "attention", "token-efficiency", "ai-coding"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = []

[project.optional-dependencies]
search = [
    "bm25s>=0.2.0",
    "model2vec>=0.3.0",
    "numpy>=1.24.0",
]
graph = [
    "tree-sitter>=0.20.0",
    "tree-sitter-languages>=1.10.0",
    "networkx>=3.0",
]
compression = [
    "anthropic>=0.25.0",
    "chromadb>=0.4.0",
]
benchmark = [
    "tiktoken>=0.5.0",
]
all = [
    "bm25s>=0.2.0",
    "model2vec>=0.3.0",
    "numpy>=1.24.0",
    "tree-sitter>=0.20.0",
    "tree-sitter-languages>=1.10.0",
    "networkx>=3.0",
    "anthropic>=0.25.0",
    "chromadb>=0.4.0",
    "tiktoken>=0.5.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.3",
    "mypy>=1.8",
]

[project.scripts]
attnroute = "attnroute.cli:main"

[project.urls]
Homepage = "https://github.com/jeranaias/attnroute"
Documentation = "https://github.com/jeranaias/attnroute#readme"
Repository = "https://github.com/jeranaias/attnroute"
Issues = "https://github.com/jeranaias/attnroute/issues"

[project.entry-points."attnroute.plugins"]
verifyfirst = "attnroute.plugins.verifyfirst:VerifyFirstPlugin"
loopbreaker = "attnroute.plugins.loopbreaker:LoopBreakerPlugin"
burnrate = "attnroute.plugins.burnrate:BurnRatePlugin"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["attnroute*"]

[tool.setuptools.package-data]
attnroute = ["*.json", "py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
